tried deleting and readding my CSS files, Sass aren't compiling correctly

--- a/css/gallery.scss
+++ b/css/gallery.scss
@@ -1,3 +1,10 @@
-.course-image {
-    background-color: lightblue;
-}
+// .course-image {
+//     background-color: beige;
+// }
+
+// #container {
+//     display: flex;
+//     justify-content: space-between;
+//     width: 300px;
+//     flex-direction: row;
+// }
