--- a/css/main.css
+++ b/css/main.css
@@ -1,116 +1,1 @@
-/*
-  1. Use a more-intuitive box-sizing model.
-*/
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-/*
-  2. Remove default margin
-*/
-* {
-  margin: 0;
-}
-
-/*
-  Typographic tweaks!
-  3. Add accessible line-height
-  4. Improve text rendering
-*/
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-/*
-  5. Improve media defaults
-*/
-img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
-}
-
-/*
-  6. Remove built-in form typography styles
-*/
-input, button, textarea, select {
-  font: inherit;
-}
-
-/*
-  7. Avoid text overflows
-*/
-p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
-}
-
-/*
-  8. Create a root stacking context
-*/
-#root, #__next {
-  isolation: isolate;
-}
-
-.course-image {
-  background-color: purple;
-}
-
-.course-image {
-  background-color: beige;
-}
-
-#container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-#courseGallery {
-  display: flex;
-  height: 300px;
-  width: 80vw;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 15px;
-  gap: 10px;
-}
-
-.course-image {
-  display: flex;
-  flex-direction: column;
-  width: calc(50% - 10px);
-  border-radius: 15px;
-}
-
-.course-image img {
-  width: 300px;
-  height: 300px;
-  padding: 10px;
-  gap: 10px;
-  border-radius: 15px;
-}
-
-.course-image span {
-  padding: 5px;
-}
-
-@media only screen and (max-width: 1024px) {
-  #container {
-    width: 100vw;
-  }
-  #courseGallery div {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    width: 100vh;
-  }
-  .course-image {
-    width: 80vh;
-    justify-content: space-between;
-  }
-  .course-image img {
-    width: 50vw;
-    height: 50vh;
-  }
-}/*# sourceMappingURL=main.css.map */
+*,*::before,*::after{box-sizing:border-box}*{margin:0}body{line-height:1.5;-webkit-font-smoothing:antialiased}img,picture,video,canvas,svg{display:block;max-width:100%}input,button,textarea,select{font:inherit}p,h1,h2,h3,h4,h5,h6{overflow-wrap:break-word}#root,#__next{isolation:isolate}.course-image{background-color:purple}.course-image{background-color:beige}#container{display:flex;flex-direction:row;flex-wrap:wrap;justify-content:space-around}#courseGallery{display:flex;height:300px;width:80vw;flex-direction:row;justify-content:space-between;flex-wrap:wrap;padding:15px;gap:10px}.course-image{display:flex;flex-direction:column;width:calc(50% - 10px);border-radius:15px}.course-image img{width:300px;height:300px;padding:10px;gap:10px;border-radius:15px}.course-image span{padding:5px}@media only screen and (max-width: 1024px){#container{width:100vw}#courseGallery div{flex-direction:column;flex-wrap:nowrap;width:100vh}.course-image{width:80vh;justify-content:space-between}.course-image img{width:50vw;height:50vh}}/*# sourceMappingURL=main.css.map */
