--- a/css/gallery.scss
+++ b/css/gallery.scss
@@ -1,10 +1,3 @@
-// .course-image {
-//     background-color: beige;
-// }
-
-// #container {
-//     display: flex;
-//     justify-content: space-between;
-//     width: 300px;
-//     flex-direction: row;
+// #bookButton {
+//     width: 2rem;
 // }
