--- a/css/main.scss
+++ b/css/main.scss
@@ -54,6 +54,37 @@
     border-radius: 15px;
 }
 
+.header {
+    display: flex;
+    background-color: burlywood;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    width: 100%;
+    height: 4rem;
+    
+}
+
+.menu {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    right: 0;
+    margin-right: 2rem;
+}
+
+
+.menu-buttons {
+    display: flex;
+    gap: 1rem;
+    cursor: pointer;
+    // position: relative;
+    justify-content: flex-end;
+    list-style: none;
+}
+
+
 @media only screen and (max-width: 1024px) {
 
     #container {
