--- a/css/main.scss
+++ b/css/main.scss
@@ -57,7 +57,7 @@
 .header {
     display: flex;
     background-color: burlywood;
-    position: absolute;
+    position: sticky;
     align-items: center;
     justify-content: center;
     top: 0;
@@ -84,6 +84,26 @@
     list-style: none;
 }
 
+// Form popup 
+
+.formData {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 38vw;
+    height: 30vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 3px;
+    border-radius: 15px;
+    
+}
+
+.formData h2 {
+    display: flex;
+    margin-bottom: 2rem;
+    align-self: center;
+}
 
 @media only screen and (max-width: 1024px) {
 
