--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,10 @@
 @import "reset.scss";
 @import "gallery.scss";
 
+.title {
+    cursor: pointer;
+}
+
 .course-image {
     background-color: beige;
 }
