--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,211 +1,8 @@
 @import "reset.scss";
 @import "gallery.scss";
 @import "addUser.scss";
-
-
-.title {
-    cursor: pointer;
-}
-
-body {
-    background-image: url('/src/assets/backgroundImages/maldives-1993704_1920.jpg');
-    background-size: cover;
-}
-
-.twoColumn {
-    display: flex;
-    position: relative;
-    justify-content: flex-start;
-    gap: 3rem;
-}
-
-.course-image {
-    background-color: #f5f5dc;
-}
-
-#container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-#courseGallery {
-    display: flex;
-    height: 300px;
-    width: 80vw;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 15px;
-    gap: 10px;
-}
-
-.coure-image div {
-    margin: 3px;
-}
-
-.course-image {
-    display: flex;
-    // flex-direction: column;
-    width: calc(50% - 10px);
-    border-radius: 15px;
-    background-color: rgba(255, 255, 255, 0.75);
-    padding: 10px;
-}
-
-.course-image img {
-    width: 300px;
-    height: 300px;
-    gap: 10px;
-    border-radius: 15px;
-
-}
-
-
-.course-image p {
-    display: flex;
-    flex-direction: column;
-    
-}
-
-.textContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    margin-left: 2rem;
-    
-
-}
-
-.description {
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
-}
-
-
-.bookButton {
-    min-width: 10vw;
-    min-height: 2rem;
-    background-color: rgba(10, 246, 231, 0.2);
-    color: black;
-    position: relative;
-    bottom: 0;
-    align-self: flex-end;
-    margin: 3px;
-    border-radius: 15px;
-    font-weight: bolder;
-    font-size: large;
-    cursor: pointer;
-}
-
-
-.header {
-    display: flex;
-    background-color: rgb(205, 216, 187, 0.7);
-    position: sticky;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    width: 100%;
-    height: 4rem;
-
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-.menu {
-    position: absolute;
-    display: flex;
-    justify-content: flex-end;
-    right: 0;
-    margin-right: 2rem;
-}
-
-
-.menu-buttons {
-    display: flex;
-    gap: 1rem;
-    cursor: pointer;
-    justify-content: flex-end;
-    list-style: none;
-}
-
-// Form popup 
-
-.formData {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    width: 38vw;
-    height: 30vh;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 3px;
-    border-radius: 15px;
-
-}
-
-.formData h2 {
-    display: flex;
-    margin-bottom: 2rem;
-    align-self: center;
-}
-
-@media only screen and (max-width: 1560px) {
-    .twoColumn {
-        gap: 1rem;
-    }
-
-    .bookButton {
-        min-width: 10rem;
-    }
-
-    .textContainer {
-        margin: auto;
-        padding-left: 5pxpx;
-    }
-
-    .course-image {
-        flex-direction: column;
-    }
-}
-
-
-@media only screen and (max-width: 1224px) {
-
-    #container {
-        width: 100vw;
-    }
-
-    #courseGallery div {
-        flex-direction: column;
-        flex-wrap: nowrap;
-        width: 80vw;
-    }
-
-    .course-image {
-        width: 60vw;
-        justify-content: space-between;
-    }
-
-    .course-image img {
-        width: 50vw;
-        height: 50vh;
-    }
-
-    .course-image h2 {
-        display: flex;
-        position: relative;
-        justify-content: center;
-        bottom: 0;
-        right: 0;
-    }
-
-    .textContainer {
-        margin: auto;
-    }
-}
+@import "formPopUp.scss";
+@import "searchForm.scss";
+@import "button.scss";
+@import "mediaQuerys.scss";
+@import "header.scss";
