--- a/src/css/_formPopUp.scss
+++ b/src/css/_formPopUp.scss
@@ -5,27 +5,44 @@
     flex-direction: column;
     position: absolute;
     justify-content: space-evenly;
-    // width: 37.5vw;
+    color: white;
     width: 45vw;
     height: 90vh;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
     padding: 3px;
     border-radius: 15px;
     z-index: 999;
 }
+.formData input {
+    width: 30vw;
+    background-color: rgba(10, 246, 231, 0.4);
+    color: white;
+}
 
+.formData input::placeholder{
+    color: white;
+}
+
+.formData textarea::placeholder{
+    color: white;
+}
+
+.formData textarea {
+    width: 30vw;
+    background-color: rgba(10, 246, 231, 0.4);
+
+}
 .formData form {
     display: flex;
     position: relative;
     flex-direction: column;
     align-self: center;
     width: 30vw;
-
 }
 
 .formData form button {
-    background-color: white;
+    color: white;
+    background-color: rgba(10, 246, 231, 0.4);
 }
 
 
@@ -34,10 +51,22 @@
     margin-bottom: 2rem;
     align-self: center;
     font-weight: bolder;
+    font-size: 3em;
 }
+
 
 @media only screen and (max-width: 1260px) {
     .formData {
+        display: flex;
         width: 77.5vw;
+        // align-items: center;
+        align-self: center;
+        justify-content: center;
     }
+    .formData form  {
+        gap: 3px;
+    }
+
+
+
 }
